kube/api-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: crawler
  labels:
    app: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      imagePullSecrets:
        - name: mydockerreg
      containers:
        -
          name: crawler-api
          image: hub.normans.co.za/crawler:0.0.3
          ports:
            - containerPort: 3000
