kube/api-server-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-server-deployment
  labels:
    app: api-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-server
  template:
    metadata:
      labels:
        app: api-server
    spec:
      containers:
        -
          name: crawler-api
          image: crawler:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
