kube/worker-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
  labels:
    app: worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        -
          name: worker
          image: crawler:latest
          imagePullPolicy: Never
          command:
            - "worker"
            - "--worker_function"
            - "get_html_worker"
