kube/faktory-service-internal.yaml
apiVersion: v1
kind: Service
metadata:
  name: faktory-internal
spec:
  selector:
    app: faktory
  ports:
    - protocol: TCP
      port: 7419
      targetPort: 7419
